Linux build fixes

--- a/openvdb/Makefile
+++ b/openvdb/Makefile
@@ -85,7 +85,7 @@
 # $(BOOST_PYTHON_LIB) and $(NUMPY_INCL_DIR) below to your local distributions
 # of those libraries.
 #
-
+shared=no
 # The directory into which to install libraries, executables and header files
 DESTDIR := /tmp/OpenVDB
 
